# blazenet-device-fw

./: README.md
host-radio/: CMakeLists.txt  README.md  efr32fg32b0xxf512.ld
host-radio/Includes/: spiffs_config.h
host-radio/Includes/FreeRTOS/: FreeRTOSConfig.h
host-radio/Includes/gecko-config/: README.md  efwb_se_manager_config.h  pin_config.h  sl_debug_swo_config.h  sl_rail_util_init_inst0_config.h  sl_rail_util_pa_config.h  sl_spidrv_eusart_flash_config.h  sl_spidrv_eusart_host_config.h  sl_uartdrv_eusart_tty_config.h
host-radio/Sources/: Main.cpp
host-radio/Sources/BlazeNet/: Beacon.cpp  Beacon.h  Init.h
host-radio/Sources/Crypto/: Context+Util.cpp  Context.cpp  Context.h  Init.cpp  Init.h
host-radio/Sources/Drivers/: sl_spidrv_init.c  sl_spidrv_instances.h  sl_uartdrv_init.c  sl_uartdrv_instances.h
host-radio/Sources/Fs/: Flash.cpp  Flash.h  FlashInfo.cpp  FlashInfo.h  Init.cpp  Init.h  NorFs.cpp  NorFs.h
host-radio/Sources/HostIf/: CommandHandlers.cpp  Commands.h  Init.cpp  Init.h  IrqManager.cpp  IrqManager.h  Task.cpp  Task.h  Watchdog.cpp  Watchdog.h
host-radio/Sources/HostIf/Handlers/: BeaconConfig.h  GetCounters.h  GetInfo.h  GetPacketQueueStatus.h  GetStatus.h  IrqConfig.h  IrqStatus.h  RadioConfig.h  ReadPacket.h  TransmitPacket.h
host-radio/Sources/Hw/: Clocks.h  Identity.cpp  Identity.h  Indicators.cpp  Indicators.h
host-radio/Sources/Init/: CppHeap.cpp  FaultHandlers.cpp
host-radio/Sources/Log/: Logger.cpp  Logger.h
host-radio/Sources/Packet/: Handler.cpp  Handler.h
host-radio/Sources/Radio/: Init.cpp  Init.h  Task.cpp  Task.h  rail_config.c  rail_config.h  sl_rail_util_callbacks.c  sl_rail_util_init.c
host-radio/Sources/Rtos/: Idle.cpp  Memory.cpp  Rtos.h  Start.cpp
host-radio/Sources/Util/: Crc32.h
libs/: README.md
libs/blazenet-types/: CMakeLists.txt
libs/blazenet-types/Includes/BlazeNet/: Types.h
libs/blazenet-types/Includes/BlazeNet/Types/: Beacon.h  Mac.h  Phy.h  Shared.h
